agregando eventos de drag and drop al proyecto

--- a/src/components/style/ImageCard.scss
+++ b/src/components/style/ImageCard.scss
@@ -38,6 +38,7 @@
     border-radius: var(--border-card);
     padding: 2.5em 4.5em;
     background-color: #F6F8FB;
+    cursor: pointer;
 }
 
 .ImageCard__Container--img{
